# 2048.qml

./: .gitignore  2048.qml  CMakeLists.txt  README.md  main.cpp  main.qml  resources.qrc
